issue get element of images and not key of array

--- a/views/slideshow.ejs
+++ b/views/slideshow.ejs
@@ -12,7 +12,7 @@
                 i=1
             }
 
-            document.getElementById('image').src = 'Diapositiva' + i +'.JPG'
+            document.getElementById('image').src = 'Diapositiva' + i + '.JPG'; <!-- TODO: Get element of images -->
         }, interval);
     </script>
 </head>
